crates/editor-codec-macros/tests/compile_fail/wrong_grade_on_struct.stderr
error: open/closed grades are enum-only
 --> tests/compile_fail/wrong_grade_on_struct.rs:5:12
  |
5 | pub struct S {
  |            ^
